Removes, moves & relinks stylesheets

--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Enter title</title>
-  <meta name="description" content="enter-description">
-  <meta name="author" content="Juan Manuel Linares">
+  <title>Beaktor</title>
+  <meta name="description" content="Beaktor">
+  <meta name="author" content="Beaktor">
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="/favicon.ico">
 
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="assets/css/build/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/build/main.css">
 
   
 
 </head>
 
 <body>
+
+  <h1>Caca</h1>
+  
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="assets/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/scripts.js"></script>
