--- a/index.html
+++ b/index.html
@@ -13,14 +13,48 @@
 
   <link rel="stylesheet" href="assets/css/build/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/build/main.css">
-
-  
-
 </head>
 
 <body>
 
-  <h1>Caca</h1>
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container">
+      <div class="row w-100">
+        <div class="col-2">
+          <a class="navbar-brand" href="#">
+            <img src="/assets/img/logo-Beaktor.png" alt="">
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+        <div class="collapse navbar-collapse col-8" id="navbarNavAltMarkup">
+          <div class="navbar-nav m-auto nav-center">
+            <a class="nav-item nav-link active" href="#">CONFIGURA <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="#">COMPRAR</a>
+            <a class="nav-item nav-link" href="#">CUSTOM</a>
+            <a class="nav-item nav-link" href="#">SALA DE PRENSA</a>
+          </div>
+        </div>
+        <div class="col-2 m-auto nav-left">
+          <div class="navbar-nav row justify-content-between">
+            <a href="#" class="nav-item cart">
+              <img src="/assets/img/cart.png" alt="carrito">
+            </a>
+            <a class="nav-item nav-link active" href="#">LOG IN</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                ES
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="#">EN</a>
+              </div>
+            </li>
+          </div>
+        </div>
+      </div>
+    </div>
+  </nav>
   
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="assets/js/bootstrap.bundle.min.js"></script>
