--- a/index.html
+++ b/index.html
@@ -55,6 +55,88 @@
       </div>
     </div>
   </nav>
+
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <span>Arrow up</span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="footer-logo">
+            <a href="#">
+              <img src="/assets/img/logo-Beaktor.png" alt="logo-Beaktor">
+            </a>
+          </div> 
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-2">
+          <h2>CONFIGURA</h2>
+          <ul>
+            <li><a href="#">Características técnicas</a></li>
+            <li><a href="#">Modelos</a></li>
+            <li><a href="#">BeakArt</a></li>
+            <li><a href="#">Accesorios</a></li>
+          </ul>
+        </div>
+        <div class="col-2">
+          <h2>COMPRA</h2>
+          <ul>
+            <li><a href="#">BEAKTOR(C)</a></li>
+            <li><a href="#">BeakArt</a></li>
+            <li><a href="#">Accesorios</a></li>
+            <li><a href="#">Formas de pago</a></li>
+            <li><a href="#">Financiación</a></li>
+          </ul>
+        </div>
+        <div class="col-2">
+          <h2>CUSTOM</h2>
+          <ul>
+            <li><a href="#">Proyectos</a></li>
+            <li><a href="#">Calculadora de ahorro</a></li>
+          </ul>
+        </div>
+        <div class="col-2">
+          <h2>SALA DE PRENSA</h2>
+          <ul>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Noticias</a></li>
+            <li><a href="#">Descargas</a></li>
+          </ul>
+        </div>
+        <div class="col-2">
+          <h2>COMPAÑÍA</h2>
+          <ul>
+            <li><a href="#">Acerca de BEAKTOR</a></li>
+            <li><a href="#">Contacto</a></li>
+            <li><a href="#">Registro</a></li>
+            <li><a href="#">Puntos de venta</a></li>
+            <li><a href="#">Partner with BEAKTOR</a></li>
+            <li><a href="#">Soporte técnico</a></li>
+            <li><a href="#">FAQ</a></li>
+          </ul>
+        </div>
+        <div class="col-2">
+          <a href="#" class="social-icon"><img src="/assets/img/vec/instagram.svg" alt="Instagram"></a>
+          <a href="#" class="social-icon"><img src="/assets/img/vec/facebook.svg" alt="Facebook"></a>
+          <a href="#" class="social-icon"><img src="/assets/img/vec/twitter.svg" alt="Twitter"></a>
+          <a href="#" class="social-icon"><img src="/assets/img/vec/linkedin.svg" alt="Linkedin"></a>
+          <a href="#" class="social-icon"><img src="/assets/img/medium.png" alt="medium"></a> 
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-6">Copyright © 2020 Beaktor. Todos los derechos reservados</div>
+        <div class="col-6">
+          <a href="#">Política de privacidad</a>
+          <a href="#">Política de cookies</a>
+          <a href="#">Política de devolución</a>
+        </div>
+      </div>
+    </div>
+  </footer>
   
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="assets/js/bootstrap.bundle.min.js"></script>
