Last fixes in HTML & CSS footer code

--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col">
-          <span>Arrow up</span>
+        <div class="col text-center">
+          <a href="#">
+            <img class="back-up" src="/assets/img/vec/arrow_up.svg" alt="volver-arriba">
+          </a>
         </div>
       </div>
       <div class="row">
@@ -72,7 +74,7 @@
           </div> 
         </div>
       </div>
-      <div class="row">
+      <div class="row footer-menus">
         <div class="col-2">
           <h2>CONFIGURA</h2>
           <ul>
@@ -119,7 +121,7 @@
             <li><a href="#">FAQ</a></li>
           </ul>
         </div>
-        <div class="col-2">
+        <div class="col-2 social d-flex mt-auto align-items-center">
           <a href="#" class="social-icon"><img src="/assets/img/vec/instagram.svg" alt="Instagram"></a>
           <a href="#" class="social-icon"><img src="/assets/img/vec/facebook.svg" alt="Facebook"></a>
           <a href="#" class="social-icon"><img src="/assets/img/vec/twitter.svg" alt="Twitter"></a>
@@ -127,9 +129,11 @@
           <a href="#" class="social-icon"><img src="/assets/img/medium.png" alt="medium"></a> 
         </div>
       </div>
-      <div class="row">
-        <div class="col-6">Copyright © 2020 Beaktor. Todos los derechos reservados</div>
-        <div class="col-6">
+      <div class="row footer-legal">
+        <div class="col-4">
+          <p class="copyright">Copyright © 2020 Beaktor. Todos los derechos reservados</p>
+        </div>
+        <div class="col-8">
           <a href="#">Política de privacidad</a>
           <a href="#">Política de cookies</a>
           <a href="#">Política de devolución</a>
