Adds footer link to /contacto page

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="col-2">
           <h2>COMPRA</h2>
           <ul>
-            <li><a href="#">BEAKTOR(C)</a></li>
+            <li><a href="#">BEAKTOR&copy;</a></li>
             <li><a href="#">BeakArt</a></li>
             <li><a href="#">Accesorios</a></li>
             <li><a href="#">Formas de pago</a></li>
@@ -113,7 +113,7 @@
           <h2>COMPAÑÍA</h2>
           <ul>
             <li><a href="#">Acerca de BEAKTOR</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="/contacto.html">Contacto</a></li>
             <li><a href="#">Registro</a></li>
             <li><a href="#">Puntos de venta</a></li>
             <li><a href="#">Partner with BEAKTOR</a></li>
