Adds links to /legal.html @ other pages

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <p class="copyright">Copyright © 2020 Beaktor. Todos los derechos reservados</p>
         </div>
         <div class="col-8">
-          <a href="#">Política de privacidad</a>
+          <a href="/legal.html">Política de privacidad</a>
           <a href="#">Política de cookies</a>
           <a href="#">Política de devolución</a>
         </div>
