--- a/contacto.html
+++ b/contacto.html
@@ -83,6 +83,7 @@
           </div>
       </div>
   </main>
+  
   <footer>
     <div class="container">
       <div class="row">
@@ -93,7 +94,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col">
+        <div class="col text-center text-sm-left">
           <div class="footer-logo">
             <a href="#">
               <img src="/assets/img/logo-Beaktor.png" alt="logo-Beaktor">
@@ -102,7 +103,7 @@
         </div>
       </div>
       <div class="row footer-menus">
-        <div class="col-2">
+        <div class="col-sm-6 col-md-4 col-xl-2 text-center text-sm-left pt-3 pt-sm-0">
           <h2>CONFIGURA</h2>
           <ul>
             <li><a href="#">Características técnicas</a></li>
@@ -111,7 +112,7 @@
             <li><a href="#">Accesorios</a></li>
           </ul>
         </div>
-        <div class="col-2">
+        <div class="col-sm-6 col-md-4 col-xl-2 text-center text-sm-left pt-3 pt-sm-0">
           <h2>COMPRA</h2>
           <ul>
             <li><a href="#">BEAKTOR&copy;</a></li>
@@ -121,14 +122,14 @@
             <li><a href="#">Financiación</a></li>
           </ul>
         </div>
-        <div class="col-2">
+        <div class="col-sm-6 col-md-4 col-xl-2 text-center text-sm-left pt-3 pt-sm-0">
           <h2>CUSTOM</h2>
           <ul>
             <li><a href="#">Proyectos</a></li>
             <li><a href="#">Calculadora de ahorro</a></li>
           </ul>
         </div>
-        <div class="col-2">
+        <div class="col-sm-6 col-md-4 col-xl-2 text-center text-sm-left pt-3 pt-sm-0">
           <h2>SALA DE PRENSA</h2>
           <ul>
             <li><a href="#">Blog</a></li>
@@ -136,7 +137,7 @@
             <li><a href="#">Descargas</a></li>
           </ul>
         </div>
-        <div class="col-2">
+        <div class="col-sm-6 col-md-4 col-xl-2 text-center text-sm-left pt-3 pt-sm-0">
           <h2>COMPAÑÍA</h2>
           <ul>
             <li><a href="#">Acerca de BEAKTOR</a></li>
@@ -148,7 +149,7 @@
             <li><a href="#">FAQ</a></li>
           </ul>
         </div>
-        <div class="col-2 social d-flex mt-auto align-items-center">
+        <div class="col-sm-6 col-md-4 col-xl-2 social d-flex mt-auto align-items-center justify-content-center justify-content-sm-end">
           <a href="#" class="social-icon"><img src="/assets/img/vec/instagram.svg" alt="Instagram"></a>
           <a href="#" class="social-icon"><img src="/assets/img/vec/facebook.svg" alt="Facebook"></a>
           <a href="#" class="social-icon"><img src="/assets/img/vec/twitter.svg" alt="Twitter"></a>
@@ -157,11 +158,11 @@
         </div>
       </div>
       <div class="row footer-legal">
-        <div class="col-4">
+        <div class="col-md-6 col-xl-4 d-flex justify-content-center justify-content-sm-start">
           <p class="copyright">Copyright © 2020 Beaktor. Todos los derechos reservados</p>
         </div>
-        <div class="col-8">
-          <a href="/legal.html">Política de privacidad</a>
+        <div class="col-md-6 col-xl-8 d-flex justify-content-center justify-content-sm-start">
+          <a href="#">Política de privacidad</a>
           <a href="#">Política de cookies</a>
           <a href="#">Política de devolución</a>
         </div>
