--- a/index.html
+++ b/index.html
@@ -18,32 +18,33 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container">
-      <div class="row w-100">
-        <div class="col-2">
-          <a class="navbar-brand" href="#">
-            <img src="/assets/img/logo-Beaktor.png" alt="">
+    <div class="container p-0">
+      <div class="row w-100 m-0">
+        <div class="col-10 col-lg-4 d-flex justify-content-between">
+          <a class="navbar-brand" href="/index.html">
+            <img src="/assets/img/vec/beaktor_logo_blanco.svg" alt="logo-Beaktor">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
         </div>
-        <div class="collapse navbar-collapse col-8" id="navbarNavAltMarkup">
-          <div class="navbar-nav m-auto nav-center">
+        <div class="collapse navbar-collapse col-5 p-3 p-lg-0 ml-auto" id="navbarNavAltMarkup">
+          <div class="navbar-nav w-100 d-flex justify-content-between align-items-end nav-center">
             <a class="nav-item nav-link active" href="#">CONFIGURA <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="#">COMPRAR</a>
             <a class="nav-item nav-link" href="#">CUSTOM</a>
             <a class="nav-item nav-link" href="#">SALA DE PRENSA</a>
           </div>
         </div>
-        <div class="col-2 m-auto nav-left">
-          <div class="navbar-nav row justify-content-between">
-            <a href="#" class="nav-item cart">
+        <div class="col-1 d-none d-lg-block"></div>
+        <div class="col-2 nav-left">
+          <div class="navbar-nav row justify-content-end">
+            <a href="#" class="nav-item cart d-none">
               <img src="/assets/img/cart.png" alt="carrito">
             </a>
-            <a class="nav-item nav-link active" href="#">LOG IN</a>
+            <a class="nav-item nav-link active d-none" href="#">LOG IN</a>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle text-right" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 ES
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
