Changes logo img (temporary png for svg) and links /legal.html @ footer

--- a/legal.html
+++ b/legal.html
@@ -115,7 +115,7 @@
         <div class="col text-center text-sm-left">
           <div class="footer-logo">
             <a href="#">
-              <img src="/assets/img/logo-Beaktor.png" alt="logo-Beaktor">
+              <img src="/assets/img/vec/beaktor_logo_blanco.svg" alt="logo-Beaktor">
             </a>
           </div> 
         </div>
@@ -180,7 +180,7 @@
           <p class="copyright">Copyright © 2020 Beaktor. Todos los derechos reservados</p>
         </div>
         <div class="col-md-6 col-xl-8 d-flex justify-content-center justify-content-sm-start">
-          <a href="#">Política de privacidad</a>
+          <a href="/legal.html">Política de privacidad</a>
           <a href="#">Política de cookies</a>
           <a href="#">Política de devolución</a>
         </div>
