Contacto page responsive Bootstrap classes

--- a/contacto.html
+++ b/contacto.html
@@ -69,14 +69,14 @@
 
   <main class="container">
       <div class="row main-wrapper">
-          <div class="col-8 m-auto">
+          <div class="col-md-10 col-lg-8 m-auto">
               <div class="row">
-                  <div class="col-6 contact-info">
+                  <div class="col-sm-8 m-auto col-md-6 contact-info">
                       <h2>Encuéntranos en:</h2>
                       <h3 class="phone-number">+34 910 840 633</h3>
                       <p class="address">Julián Camarillo, 47 A-208<span class="d-block">28037 Madrid</span></p>
                   </div>
-                  <div class="col-6 contact-form">
+                  <div class="col-sm-8 m-auto col-md-6 contact-form">
                       <p>También puedes escribirnos a traves de nuestro formulario o a: <a class="contact-email" href="mailto:mybeaktor@beaktor.com">mybeaktor@beaktor.com</a></p>
                       <img class="w-100" src="/assets/img/Proxy-form.png" alt="">
                   </div>
