Header Bootstrap responsive classes & SASS responsive mixins

--- a/contacto.html
+++ b/contacto.html
@@ -60,7 +60,7 @@
   <header>
     <div class="container h-100 p-0">
         <div class="row w-100 h-100 m-auto">
-            <div class="col-8 h-100 m-auto position-relative">
+            <div class="col-sm-8 col-md-10 col-lg-8 h-100 m-auto position-relative">
                 <h1 class="position-absolute header-title">Contacto</h1>
             </div>
         </div>
