--- a/contacto.html
+++ b/contacto.html
@@ -57,11 +57,11 @@
     </div>
   </nav>
 
-  <header>
+  <header class="hero">
     <div class="container h-100 p-0">
         <div class="row w-100 h-100 m-auto">
             <div class="col-sm-8 col-md-10 col-lg-8 h-100 m-auto position-relative">
-                <h1 class="position-absolute header-title">Contacto</h1>
+                <h1 class="position-absolute hero-title">Contacto</h1>
             </div>
         </div>
     </div>
@@ -97,7 +97,7 @@
       <div class="row">
         <div class="col text-center text-sm-left">
           <div class="footer-logo">
-            <a href="#">
+            <a href="index.html">
               <img src="/assets/img/vec/beaktor_logo_blanco.svg" alt="logo-Beaktor">
             </a>
           </div> 
@@ -151,11 +151,11 @@
           </ul>
         </div>
         <div class="col-sm-6 col-md-4 col-xl-2 social d-flex mt-auto align-items-center justify-content-center justify-content-sm-end">
-          <a href="#" class="social-icon"><img src="/assets/img/vec/instagram.svg" alt="Instagram"></a>
-          <a href="#" class="social-icon"><img src="/assets/img/vec/facebook.svg" alt="Facebook"></a>
-          <a href="#" class="social-icon"><img src="/assets/img/vec/twitter.svg" alt="Twitter"></a>
-          <a href="#" class="social-icon"><img src="/assets/img/vec/linkedin.svg" alt="Linkedin"></a>
-          <a href="#" class="social-icon"><img src="/assets/img/medium.png" alt="medium"></a> 
+          <a href="http://www.instagram.com/iambeaktor/" target="_blank" class="social-icon"><img src="/assets/img/vec/instagram.svg" alt="Instagram"></a>
+          <a href="http://www.facebook.com/iambeaktor/" target="_blank" class="social-icon"><img src="/assets/img/vec/facebook.svg" alt="Facebook"></a>
+          <a href="http://www.twitter.com/iambeaktor" target="_blank" class="social-icon"><img src="/assets/img/vec/twitter.svg" alt="Twitter"></a>
+          <a href="http://www.linkedin.com/company/beaktor" target="_blank" class="social-icon"><img src="/assets/img/vec/linkedin.svg" alt="Linkedin"></a>
+          <a href="http://www.medium.com/iambeaktor/" target="_blank" class="social-icon"><img src="/assets/img/medium.png" alt="Medium"></a> 
         </div>
       </div>
       <div class="row footer-legal">
