--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="row">
         <div class="col text-center text-sm-left">
           <div class="footer-logo">
-            <a href="#">
+            <a href="index.html">
               <img src="/assets/img/vec/beaktor_logo_blanco.svg" alt="logo-Beaktor">
             </a>
           </div> 
@@ -123,11 +123,11 @@
           </ul>
         </div>
         <div class="col-sm-6 col-md-4 col-xl-2 social d-flex mt-auto align-items-center justify-content-center justify-content-sm-end">
-          <a href="#" class="social-icon"><img src="/assets/img/vec/instagram.svg" alt="Instagram"></a>
-          <a href="#" class="social-icon"><img src="/assets/img/vec/facebook.svg" alt="Facebook"></a>
-          <a href="#" class="social-icon"><img src="/assets/img/vec/twitter.svg" alt="Twitter"></a>
-          <a href="#" class="social-icon"><img src="/assets/img/vec/linkedin.svg" alt="Linkedin"></a>
-          <a href="#" class="social-icon"><img src="/assets/img/medium.png" alt="medium"></a> 
+          <a href="http://www.instagram.com/iambeaktor/" target="_blank" class="social-icon"><img src="/assets/img/vec/instagram.svg" alt="Instagram"></a>
+          <a href="http://www.facebook.com/iambeaktor/" target="_blank" class="social-icon"><img src="/assets/img/vec/facebook.svg" alt="Facebook"></a>
+          <a href="http://www.twitter.com/iambeaktor" target="_blank" class="social-icon"><img src="/assets/img/vec/twitter.svg" alt="Twitter"></a>
+          <a href="http://www.linkedin.com/company/beaktor" target="_blank" class="social-icon"><img src="/assets/img/vec/linkedin.svg" alt="Linkedin"></a>
+          <a href="http://www.medium.com/iambeaktor/" target="_blank" class="social-icon"><img src="/assets/img/medium.png" alt="Medium"></a> 
         </div>
       </div>
       <div class="row footer-legal">
