--- a/legal.html
+++ b/legal.html
@@ -63,7 +63,7 @@
       <div class="row main-wrapper">
           <div class="col-sm-10 col-md-8 col-xl-6 m-auto">
               <section id="privacy">
-                <h2 class="section-title">Política de Privacidad</h2>
+                <h2 class="position-relative section-title">Política de Privacidad</h2>
                 <h3 class="subsection">Información al usuario</h3>
                 <p>Work Anywhere MLJ, S.L., como Responsable del Tratamiento, le informa que, según lo dispuesto en el Reglamento (UE) 2016/679, de 27 de abril, (RGPD) y en la L.O. 3/2018, de 5 de diciembre, de protección de datos y garantía de los derechos digitales (LOPDGDD), trataremos su datos tal y como reflejamos en la presente Política de Privacidad.</p> 
                 <p>En esta Política de Privacidad describimos cómo recogemos sus datos personales y por qué los recogemos, qué hacemos con ellos, con quién los compartimos, cómo los protegemos y sus opciones en cuanto al tratamiento de sus datos personales.</p> 
@@ -114,7 +114,7 @@
       <div class="row">
         <div class="col text-center text-sm-left">
           <div class="footer-logo">
-            <a href="#">
+            <a href="index.html">
               <img src="/assets/img/vec/beaktor_logo_blanco.svg" alt="logo-Beaktor">
             </a>
           </div> 
@@ -168,11 +168,11 @@
           </ul>
         </div>
         <div class="col-sm-6 col-md-4 col-xl-2 social d-flex mt-auto align-items-center justify-content-center justify-content-sm-end">
-          <a href="#" class="social-icon"><img src="/assets/img/vec/instagram.svg" alt="Instagram"></a>
-          <a href="#" class="social-icon"><img src="/assets/img/vec/facebook.svg" alt="Facebook"></a>
-          <a href="#" class="social-icon"><img src="/assets/img/vec/twitter.svg" alt="Twitter"></a>
-          <a href="#" class="social-icon"><img src="/assets/img/vec/linkedin.svg" alt="Linkedin"></a>
-          <a href="#" class="social-icon"><img src="/assets/img/medium.png" alt="medium"></a> 
+          <a href="http://www.instagram.com/iambeaktor/" target="_blank" class="social-icon"><img src="/assets/img/vec/instagram.svg" alt="Instagram"></a>
+          <a href="http://www.facebook.com/iambeaktor/" target="_blank" class="social-icon"><img src="/assets/img/vec/facebook.svg" alt="Facebook"></a>
+          <a href="http://www.twitter.com/iambeaktor" target="_blank" class="social-icon"><img src="/assets/img/vec/twitter.svg" alt="Twitter"></a>
+          <a href="http://www.linkedin.com/company/beaktor" target="_blank" class="social-icon"><img src="/assets/img/vec/linkedin.svg" alt="Linkedin"></a>
+          <a href="http://www.medium.com/iambeaktor/" target="_blank" class="social-icon"><img src="/assets/img/medium.png" alt="Medium"></a> 
         </div>
       </div>
       <div class="row footer-legal">
