--- a/legal.html
+++ b/legal.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Beaktor">
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="shortcut icon" href="favicon.ico">
 
   <link rel="stylesheet" href="assets/css/build/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/build/main.css">
@@ -21,8 +21,8 @@
     <div class="container p-0">
       <div class="row w-100 m-0">
         <div class="col-10 col-lg-4 d-flex justify-content-between">
-          <a class="navbar-brand" href="/index.html">
-            <img src="/assets/img/vec/beaktor_logo_blanco.svg" alt="logo-Beaktor">
+          <a class="navbar-brand" href="index.html">
+            <img src="assets/img/vec/beaktor_logo_blanco.svg" alt="logo-Beaktor">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -40,7 +40,7 @@
         <div class="col-2 nav-left">
           <div class="navbar-nav row justify-content-end">
             <a href="#" class="nav-item cart d-none">
-              <img src="/assets/img/cart.png" alt="carrito">
+              <img src="assets/img/cart.png" alt="carrito">
             </a>
             <a class="nav-item nav-link active d-none" href="#">LOG IN</a>
             <li class="nav-item dropdown">
@@ -107,7 +107,7 @@
       <div class="row">
         <div class="col text-center">
           <a href="#">
-            <img class="back-up" src="/assets/img/vec/arrow_up.svg" alt="volver-arriba">
+            <img class="back-up" src="assets/img/vec/arrow_up.svg" alt="volver-arriba">
           </a>
         </div>
       </div>
@@ -115,7 +115,7 @@
         <div class="col text-center text-sm-left">
           <div class="footer-logo">
             <a href="index.html">
-              <img src="/assets/img/vec/beaktor_logo_blanco.svg" alt="logo-Beaktor">
+              <img src="assets/img/vec/beaktor_logo_blanco.svg" alt="logo-Beaktor">
             </a>
           </div> 
         </div>
@@ -159,7 +159,7 @@
           <h2>COMPAÑÍA</h2>
           <ul>
             <li><a href="#">Acerca de BEAKTOR</a></li>
-            <li><a href="/contacto.html">Contacto</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
             <li><a href="#">Registro</a></li>
             <li><a href="#">Puntos de venta</a></li>
             <li><a href="#">Partner with BEAKTOR</a></li>
@@ -168,11 +168,11 @@
           </ul>
         </div>
         <div class="col-sm-6 col-md-4 col-xl-2 social d-flex mt-auto align-items-center justify-content-center justify-content-sm-end">
-          <a href="http://www.instagram.com/iambeaktor/" target="_blank" class="social-icon"><img src="/assets/img/vec/instagram.svg" alt="Instagram"></a>
-          <a href="http://www.facebook.com/iambeaktor/" target="_blank" class="social-icon"><img src="/assets/img/vec/facebook.svg" alt="Facebook"></a>
-          <a href="http://www.twitter.com/iambeaktor" target="_blank" class="social-icon"><img src="/assets/img/vec/twitter.svg" alt="Twitter"></a>
-          <a href="http://www.linkedin.com/company/beaktor" target="_blank" class="social-icon"><img src="/assets/img/vec/linkedin.svg" alt="Linkedin"></a>
-          <a href="http://www.medium.com/iambeaktor/" target="_blank" class="social-icon"><img src="/assets/img/medium.png" alt="Medium"></a> 
+          <a href="http://www.instagram.com/iambeaktor/" target="_blank" class="social-icon"><img src="assets/img/vec/instagram.svg" alt="Instagram"></a>
+          <a href="http://www.facebook.com/iambeaktor/" target="_blank" class="social-icon"><img src="assets/img/vec/facebook.svg" alt="Facebook"></a>
+          <a href="http://www.twitter.com/iambeaktor" target="_blank" class="social-icon"><img src="assets/img/vec/twitter.svg" alt="Twitter"></a>
+          <a href="http://www.linkedin.com/company/beaktor" target="_blank" class="social-icon"><img src="assets/img/vec/linkedin.svg" alt="Linkedin"></a>
+          <a href="http://www.medium.com/iambeaktor/" target="_blank" class="social-icon"><img src="assets/img/medium.png" alt="Medium"></a> 
         </div>
       </div>
       <div class="row footer-legal">
@@ -180,7 +180,7 @@
           <p class="copyright">Copyright © 2020 Beaktor. Todos los derechos reservados</p>
         </div>
         <div class="col-md-6 col-xl-8 d-flex justify-content-center justify-content-sm-start">
-          <a href="/legal.html">Política de privacidad</a>
+          <a href="legal.html">Política de privacidad</a>
           <a href="#">Política de cookies</a>
           <a href="#">Política de devolución</a>
         </div>
