fixes last URL path and legal header issue

--- a/legal.html
+++ b/legal.html
@@ -57,7 +57,7 @@
     </div>
   </nav>
 
-  <header></header>
+  <header class="hero"></header>
 
   <main class="container">
       <div class="row main-wrapper">
