--- a/legal.html
+++ b/legal.html
@@ -63,41 +63,44 @@
       <div class="row main-wrapper">
           <div class="col-sm-10 col-md-8 col-xl-6 m-auto">
               <section id="privacy">
-                <h2 class="position-relative section-title">Política de Privacidad</h2>
-                <h3 class="subsection">Información al usuario</h3>
-                <p>Work Anywhere MLJ, S.L., como Responsable del Tratamiento, le informa que, según lo dispuesto en el Reglamento (UE) 2016/679, de 27 de abril, (RGPD) y en la L.O. 3/2018, de 5 de diciembre, de protección de datos y garantía de los derechos digitales (LOPDGDD), trataremos su datos tal y como reflejamos en la presente Política de Privacidad.</p> 
-                <p>En esta Política de Privacidad describimos cómo recogemos sus datos personales y por qué los recogemos, qué hacemos con ellos, con quién los compartimos, cómo los protegemos y sus opciones en cuanto al tratamiento de sus datos personales.</p> 
-                <p>Esta Política se aplica al tratamiento de sus datos personales recogidos por la empresa para la prestación de sus servicios. Si acepta las medidas de esta Política, acepta que tratemos sus datos personales como se define en esta Política.</p>
-                <h3 class="subsection">Contacto</h3>
-                <ul id="contact-data" class="no-bullets">
-                  <li>Denominación social: Work Anywhere MLJ, S.L.</li>
-                  <li>Nombre comercial: BEAKTOR</li> 
-                  <li>CIF: B02829935</li>
-                  <li>Domicilio: Calle Julián Camarillo, 47 Local A-208 28037 Madrid.</li>
-                  <li>e-mail: beaktor@beaktor.com</li>
-                </ul>
-                <h3 class="subsection">Principios clave</h3>
-                <p>Siempre hemos estado comprometidos con prestar nuestros servicios con el más alto grado de calidad, lo que incluye tratar sus datos con seguridad y transparencia.
-                <p>Nuestros principios son:</p>
-                <ul id="key-principles" class="no-bullets">
-                  <li><strong>Legalidad</strong>: Solo recopilaremos sus Datos personales para fines específicos, explícitos y legítimos.</li>
-                  <li><strong>Minimización de datos</strong>: Limitamos la recogida de datos de carácter personal a lo que es estrictamente relevante y necesario para los fines para los que se han recopilado.</li> 
-                  <li><strong>Limitación de la Finalidad</strong>: Solo recogeremos sus datos personales para los fines declarados y solo según sus deseos.</li>
-                  <li><strong>Precisión</strong>: Mantendremos sus datos personales exactos y actualizados.</li>
-                  <li><strong>Seguridad de los Datos</strong>: Aplicamos las medidas técnicas y organizativas adecuadas y proporcionales a los riesgos para garantizar que sus datos no sufran daños, tales como divulgación o acceso no autorizado, la destrucción accidental o ilícita o su pérdida accidental o alteración y cualquier otra forma de tratamiento ilícito.</li>
-                  <li><strong>Acceso y Rectificación</strong>: Disponemos de medios para que acceda o rectifique sus datos cuando lo considere oportuno.</li>
-                  <li><strong>Conservación</strong>: Conservamos sus datos personales de manera legal y apropiada y solo mientras es necesario para los fines para los que se han recopilado.</li>
-                  <li><strong>Las transferencias internacionales</strong>: cuando se dé el caso de que sus datos vayan a ser transferidos fuera de la UE/EEE se protegerán adecuadamente.</li>
-                  <li><strong>Terceros</strong>: El acceso y transferencia de datos personales a terceros se llevan a cabo de acuerdo con las leyes y reglamentos aplicables y con las garantías contractuales adecuadas.</li>
-                  <li><strong>Marketing Directo y cookies</strong>: Cumplimos con la legislación aplicable en materia de publicidad y cookies</li>
-                </ul>
-                <h3 class="subsection">Recogida y tratamiento de datos personales</h3>
-                <p>Las tipos de datos que se pueden solicitar y tratar son:</p>
-                <p>Datos de carácter identificativo.</p>
-                <p>También recogemos de forma automática datos sobre su visita a nuestro sitio web según se describe en la política de cookies.</p>
-                <p>Siempre que solicitemos sus Datos personales, le informaremos con claridad de qué datos personales recogemos y con qué fin. En general, recogemos y tratamos sus datos personales con el propósito de:</p>
-                <p>Proporcionar información, servicios, productos, información relevante y novedades en el sector.</p>
+                <h2 class="position-relative section-title">Política de Privacidad</h2></a>
+                <div class="drop-down hidden">
+                  <h3 class="subsection">Información al usuario</h3>
+                  <p>Work Anywhere MLJ, S.L., como Responsable del Tratamiento, le informa que, según lo dispuesto en el Reglamento (UE) 2016/679, de 27 de abril, (RGPD) y en la L.O. 3/2018, de 5 de diciembre, de protección de datos y garantía de los derechos digitales (LOPDGDD), trataremos su datos tal y como reflejamos en la presente Política de Privacidad.</p> 
+                  <p>En esta Política de Privacidad describimos cómo recogemos sus datos personales y por qué los recogemos, qué hacemos con ellos, con quién los compartimos, cómo los protegemos y sus opciones en cuanto al tratamiento de sus datos personales.</p> 
+                  <p>Esta Política se aplica al tratamiento de sus datos personales recogidos por la empresa para la prestación de sus servicios. Si acepta las medidas de esta Política, acepta que tratemos sus datos personales como se define en esta Política.</p>
+                  <h3 class="subsection">Contacto</h3>
+                  <ul id="contact-data" class="no-bullets">
+                    <li>Denominación social: Work Anywhere MLJ, S.L.</li>
+                    <li>Nombre comercial: BEAKTOR</li> 
+                    <li>CIF: B02829935</li>
+                    <li>Domicilio: Calle Julián Camarillo, 47 Local A-208 28037 Madrid.</li>
+                    <li>e-mail: beaktor@beaktor.com</li>
+                  </ul>
+                  <h3 class="subsection">Principios clave</h3>
+                  <p>Siempre hemos estado comprometidos con prestar nuestros servicios con el más alto grado de calidad, lo que incluye tratar sus datos con seguridad y transparencia.
+                  <p>Nuestros principios son:</p>
+                  <ul id="key-principles" class="no-bullets">
+                    <li><strong>Legalidad</strong>: Solo recopilaremos sus Datos personales para fines específicos, explícitos y legítimos.</li>
+                    <li><strong>Minimización de datos</strong>: Limitamos la recogida de datos de carácter personal a lo que es estrictamente relevante y necesario para los fines para los que se han recopilado.</li> 
+                    <li><strong>Limitación de la Finalidad</strong>: Solo recogeremos sus datos personales para los fines declarados y solo según sus deseos.</li>
+                    <li><strong>Precisión</strong>: Mantendremos sus datos personales exactos y actualizados.</li>
+                    <li><strong>Seguridad de los Datos</strong>: Aplicamos las medidas técnicas y organizativas adecuadas y proporcionales a los riesgos para garantizar que sus datos no sufran daños, tales como divulgación o acceso no autorizado, la destrucción accidental o ilícita o su pérdida accidental o alteración y cualquier otra forma de tratamiento ilícito.</li>
+                    <li><strong>Acceso y Rectificación</strong>: Disponemos de medios para que acceda o rectifique sus datos cuando lo considere oportuno.</li>
+                    <li><strong>Conservación</strong>: Conservamos sus datos personales de manera legal y apropiada y solo mientras es necesario para los fines para los que se han recopilado.</li>
+                    <li><strong>Las transferencias internacionales</strong>: cuando se dé el caso de que sus datos vayan a ser transferidos fuera de la UE/EEE se protegerán adecuadamente.</li>
+                    <li><strong>Terceros</strong>: El acceso y transferencia de datos personales a terceros se llevan a cabo de acuerdo con las leyes y reglamentos aplicables y con las garantías contractuales adecuadas.</li>
+                    <li><strong>Marketing Directo y cookies</strong>: Cumplimos con la legislación aplicable en materia de publicidad y cookies</li>
+                  </ul>
+                  <h3 class="subsection">Recogida y tratamiento de datos personales</h3>
+                  <p>Las tipos de datos que se pueden solicitar y tratar son:</p>
+                  <p>Datos de carácter identificativo.</p>
+                  <p>También recogemos de forma automática datos sobre su visita a nuestro sitio web según se describe en la política de cookies.</p>
+                  <p>Siempre que solicitemos sus Datos personales, le informaremos con claridad de qué datos personales recogemos y con qué fin. En general, recogemos y tratamos sus datos personales con el propósito de:</p>
+                  <p>Proporcionar información, servicios, productos, información relevante y novedades en el sector.</p>
+                </div>
             </section>      
+
           </div>
       </div>
   </main>
