Adds comments to <head> and <body> links and scripts, and links confingura.html to nav

--- a/configura.html
+++ b/configura.html
@@ -37,7 +37,7 @@
         </div>
         <div class="collapse navbar-collapse col-5 p-3 p-lg-0 ml-auto" id="navbarNavAltMarkup">
           <div class="navbar-nav w-100 d-flex justify-content-between align-items-end nav-center">
-            <a class="nav-item nav-link active" href="#">CONFIGURA <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" href="configura.html">CONFIGURA <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="#">COMPRAR</a>
             <a class="nav-item nav-link" href="#">CUSTOM</a>
             <a class="nav-item nav-link" href="#">SALA DE PRENSA</a>
