--- a/legal.html
+++ b/legal.html
@@ -11,7 +11,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="favicon.ico">
 
+<!-- Bootstrap CSS-->
   <link rel="stylesheet" href="assets/css/build/bootstrap.min.css">
+
+<!--Custom CSS -->
   <link rel="stylesheet" href="assets/css/build/main.css">
 </head>
 
@@ -30,7 +33,7 @@
         </div>
         <div class="collapse navbar-collapse col-5 p-3 p-lg-0 ml-auto" id="navbarNavAltMarkup">
           <div class="navbar-nav w-100 d-flex justify-content-between align-items-end nav-center">
-            <a class="nav-item nav-link active" href="#">CONFIGURA <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active" href="configura.html">CONFIGURA <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="#">COMPRAR</a>
             <a class="nav-item nav-link" href="#">CUSTOM</a>
             <a class="nav-item nav-link" href="#">SALA DE PRENSA</a>
@@ -191,8 +194,13 @@
     </div>
   </footer>
   
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<!-- jQuery-->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  
+<!-- Bootstrap JS -->
   <script src="assets/js/bootstrap.bundle.min.js"></script>
+
+<!-- Custom JS -->
   <script src="assets/js/scripts.js"></script>
 </body>
 </html>
