HTML & CSS for Cotas section (including responsiveness, but still lacks scroll animation)

--- a/configura.html
+++ b/configura.html
@@ -77,24 +77,38 @@
 
   <section class="container">
       <section id="cotas" class="row-wrapper">
-        <div class="col-9 m-auto">
+        <div class="col-12 col-xl-9 m-auto">
             <div class="row">
-                <div class="col-3">
+                <div class="col-5 col-sm-3 order-sm-1">
                     <div class="img-wrapper text-right">
                         <img src="assets/img/vec/beaktor_perfil1.svg" alt="perfil-izquierdo-beaktor">
                     </div>
                 </div>
-                <div class="col-6">
-                    <div class="img-wrapper text-center">
-                        <img src="assets/img/vec/beaktor_central.svg" alt="frontal-beaktor">
-                    </div>
-                </div>
-                <div class="col-3">
+                
+                <div class="col-7 col-sm-3 order-sm-3">
                     <div class="img-wrapper">
                         <img src="assets/img/vec/beaktor_perfil2.svg" alt="perfil-derecho-beaktor">
                     </div>
                 </div>
+
+                <div class="col-12 col-sm-6 order-sm-2">
+                  <div class="img-wrapper text-center">
+                      <img src="assets/img/vec/beaktor_central.svg" alt="frontal-beaktor">
+                  </div>
+                </div>
             </div>
+        </div>
+      </section>
+
+      <section id="cotas-details" class="row-wrapper">
+        <div class="col-12 col-xl-9 m-auto">
+          <div class="row">
+            <div class="col-12 col-sm-9 m-auto">
+              <div class="img-wrapper text-center">
+                <img src="assets/img/vec/beaktor_indicadores.svg" alt="frontal-beaktor-detalles">
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
