Styles for #choose-models section

--- a/configura.html
+++ b/configura.html
@@ -114,19 +114,17 @@
 
       <section id="choose-models" class="row-wrapper">
           <div class="row wrapper">
-              <div class="col-12 col-md-9 m-auto">
+              <div class="col-12 col-md-9 m-auto position-relative">
                   <div class="row">
-                    <div class="col-6">
+                    <div class="col-12 col-md-9 col-xl-6">
                         <h2 class="section-title">Elige el BEAKTOR que mejor se adapte a ti</h2>
                     </div>
                   </div>
                   <div class="row">
-                      <div class="col-6 m-auto d-flex">
-                          <div class="img-wrapper">
+                      <div class="col-9 col-sm-6 m-auto d-flex">
+                          <div class="img-wrapper position-relative">
                               <img class="w-100" src="assets/img/beaktor_conference.png" alt="beaktor-conference">
-                          </div>
-                          <div class="img-wrapper">
-                              <img class="w-100" src="assets/img/beaktor_work.png" alt="beaktor-work">
+                              <img class="w-100 position-absolute back" src="assets/img/beaktor_work.png" alt="beaktor-work">
                           </div>
                       </div>
                   </div>
