More HTML & CSS responsive code

--- a/configura.html
+++ b/configura.html
@@ -341,7 +341,7 @@
                         <p>Su superficie cerrada se puede personalizar con el accesorio Beakart, un soporte con microventosas que se pega y se despega con facilidad.</p>
                         <p>Su imagen se puede cambiar tantas veces como se desee, permitiendo a BEAKTOR convertirse en una mágica obra de arte o en un elemento complementario para la decoración del hogar.</p>
                     </div>
-                    <div class="col-md-6 text-right beakart-img">
+                    <div class="col-md-6 text-center text-sm-right beakart-img">
                         <img src="assets/img/beakart_beaktor.png" alt="beakart">
                     </div>
                 </div>
@@ -379,7 +379,7 @@
                         <p>El panel de herramientas de BEAKTOR es totalmente adaptable. Incorpora diferentes accesorios que encajan en la superficie multiperforada y que están diseñados para servir de soporte a pantallas, móviles, tabletas, documentos y otros elementos ligeros de escritorio.</p>
                         <p>El panel de herramientas de BEAKTOR es totalmente adaptable. Incorpora diferentes accesorios que encajan en la superficie multiperforada y que están diseñados para servir de soporte a pantallas, móviles, tabletas, documentos y otros elementos ligeros de escritorio.</p>
                     </div>
-                    <div class="col-md-6 text-right customize-img">
+                    <div class="col-md-6 text-center text-sm-right customize-img">
                         <img src="assets/img/beaktor_accesorios.png" alt="beaktor-accesorios">
                     </div>
                 </div>
@@ -390,14 +390,14 @@
       <section id="custom-models" class="row-wrapper">
           <div class="row">
               <div class="col">
-                  <div class="row">
-                      <div class="col-4 text-right img-wrapper">
+                  <div class="row imgs-wrapper">
+                      <div class="col-md-4 text-right">
                           <img src="assets/img/beaktor_conference.png" alt="beaktor-custom-1">
                       </div>
-                      <div class="col-4 text-center img-wrapper">
+                      <div class="col-md-4 text-center">
                         <img src="assets/img/beaktor_conference.png" alt="beaktor-custom-1">
                     </div>
-                    <div class="col-4 text-left img-wrapper">
+                    <div class="col-md-4 text-left">
                         <img src="assets/img/beaktor_conference.png" alt="beaktor-custom-1">
                     </div>
                   </div>
