Adds CTA button to BeakArt section

--- a/configura.html
+++ b/configura.html
@@ -348,13 +348,14 @@
             </div>
         </div>
       </section>
+
   </section>
 
   <!-- Section carousel -->
 
   <section class="container-fluid">
 
-      <div id="beakart-carousel" class="row-wrapper">
+      <div id="beakart-carousel" class="position-relative row-wrapper">
           <div class="owl-carousel owl-theme">
                 <img src="assets/img/beakart_1.jpg" alt="beakart">
                 <img src="assets/img/beakart_2.jpg" alt="beakart">
@@ -362,6 +363,11 @@
                 <img src="assets/img/beakart_4.jpg" alt="beakart">
                 <img src="assets/img/beakart_2.jpg" alt="beakart">
                 <img src="assets/img/beakart_3.jpg" alt="beakart">
+          </div>
+          <div class="row position-absolute btn-wrapper">
+            <div class="col-1">
+              <a href="#"><button>Comprar</button></a> 
+            </div>
           </div>
       </div>
 
