HTML & CSS code for adding buttons

--- a/configura.html
+++ b/configura.html
@@ -2517,7 +2517,6 @@
 	c3.3,0,6-2.7,6-6V31.7C524,28.4,521.3,25.7,518,25.7z M515,40h-3.1v3.1h-2.2V40h-3.1v-2.2h3.1v-3.1h2.2v3.1h3.1V40z"/>
 <rect x="-4.4" y="-20.5" class="st0" width="27.4" height="11.2"/>
 <rect x="40.6" y="-20.5" class="plus-icon" width="27.4" height="11.2"/></svg>
-                <!-- <img src="assets/img/vec/beaktor_indicadores.svg" alt="frontal-beaktor-detalles"> -->
               </div>
             </div>
           </div>
@@ -2810,13 +2809,28 @@
               <div class="col">
                   <div class="row imgs-wrapper">
                       <div class="col-md-4 text-right">
-                          <img src="assets/img/beaktor_conference.png" alt="beaktor-custom-1">
+						  <img src="assets/img/beaktor_conference.png" alt="beaktor-custom-1">
+						  <div class="row btn-wrapper">
+							  <div class="col text-center">
+								<a href="#"><button>Comprar</button></a>
+							  </div>
+						  </div>
                       </div>
                       <div class="col-md-4 text-center">
-                        <img src="assets/img/beaktor_conference.png" alt="beaktor-custom-1">
+						<img src="assets/img/beaktor_conference.png" alt="beaktor-custom-1">
+						<div class="row btn-wrapper">
+							<div class="col text-center">
+							  <a href="#"><button>Comprar</button></a>
+							</div>
+						</div>
                     </div>
                     <div class="col-md-4 text-left">
-                        <img src="assets/img/beaktor_conference.png" alt="beaktor-custom-1">
+						<img src="assets/img/beaktor_conference.png" alt="beaktor-custom-1">
+						<div class="row btn-wrapper">
+							<div class="col text-center">
+							  <a href="#"><button>Comprar</button></a>
+							</div>
+						</div>
                     </div>
                   </div>
               </div>
