HTML & CSS code for fixing jolting animation start

--- a/configura.html
+++ b/configura.html
@@ -2555,7 +2555,8 @@
                   <div class="row">
                       <div class="col-9 col-sm-6 m-auto d-flex">
                           <div id="animate-container" class="img-wrapper">
-                              <img class="w-100 beaktor front" src="assets/img/beaktor_conference.png" alt="beaktor-conference">
+							  <img class="w-100 beaktor front" src="assets/img/beaktor_conference.png" alt="beaktor-conference">
+							  <img class="w-100 beaktor null" src="assets/img/beaktor_conference.png">
                               <img class="w-100 beaktor back" src="assets/img/beaktor_work.png" alt="beaktor-work">
 						  </div>
 					  </div>
@@ -2633,12 +2634,7 @@
             <div class="col-1"></div>
 		  </div>
 
-		  
-
           <div id="table-colores" class="row table-row border-bottom">
-
-			
-
             <div class="col-2 d-none d-md-block">
               <span class="row-name colores">Colores disponibles</span>
             </div>
