Fixes tooltip (placeholder) data-content

--- a/configura.html
+++ b/configura.html
@@ -2672,7 +2672,7 @@
                         <div class="row">
 							<div class="swatch color-swatch blue" data-toggle="modal" data-target="#swatchModal" data-backdrop="false"></div>
 							<!-- Popover test -->
-                            <a tabindex="0" class="swatch color-swatch grey" data-toggle="popover" data-trigger="focus"  title="Grey Moon" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
+                            <a tabindex="0" class="swatch color-swatch grey" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
 							<!-- End Popover test -->
 						</div>
                     </div>
